Further improvements to SASS files

--- a/MVC.WebUI/Content/website/css/scss/_core/grid-layout.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/grid-layout.scss
@@ -2,6 +2,16 @@
 /* GRID LAYOUT */
 /*******************************************************************************************************************************/
 
+/*
+GRID LAYOUT - using floats and using flexbox
+
+Float grids:
+https://css-tricks.com/dont-overthink-it-grids/
+
+Flexbox grids:
+https://css-tricks.com/dont-overthink-flexbox-grids/
+
+*/
 
 /************************************************************************************************************************************************************************************/
 /* Grid Layout */
