--- a/MVC.WebUI/Content/website/css/scss/_core/animation.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/animation.scss
@@ -1,3 +1,114 @@
 ﻿/*******************************************************************************************************************************/
 /* ANIMATION */
 /*******************************************************************************************************************************/
+
+
+
+/********************************************************************************************************************************/
+/* SLIDE IN/OUT */
+
+.slide-container-h {
+    position: relative;
+    overflow-x: hidden;
+}
+
+[class*="slide-"] {
+    position: absolute !important;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 20;
+    -webkit-transition: -webkit-transform 0.6s;
+    transition: transform 0.6s;
+}
+
+.open[class*="slide-"] {
+    @include transform(translateX(0) !important);
+}
+
+.slide-left {
+    @include transform(translateX(100%));
+}
+
+.slide-right {
+    @include transform(translateX(-100%));
+}
+
+
+
+/********************************************************************************************************************************/
+/* FADE IN/OUT */
+
+@keyframes fadeInOut {
+    from {
+        opacity: 0;
+    }
+    
+    25% {
+        opacity: 1;
+    }
+    
+    75% {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes fadeInOut {
+    from {
+        opacity: 0;
+    }
+    
+    25% {
+        opacity: 1;
+    }
+    
+    75% {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
