Further tidying up of SASS files

--- a/MVC.WebUI/Content/website/css/scss/_core/animation.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/animation.scss
@@ -1,11 +1,11 @@
-﻿/*******************************************************************************************************************************/
+﻿/***********************************************************************************************************************************/
 /* ANIMATION */
-/*******************************************************************************************************************************/
+/***********************************************************************************************************************************/
 
 
 
-/********************************************************************************************************************************/
-/* SLIDE IN/OUT */
+/***********************************************************************************************************************************/
+/* Slide In/Out */
 
 .slide-container-h {
     position: relative;
@@ -37,8 +37,8 @@
 
 
 
-/********************************************************************************************************************************/
-/* FADE IN/OUT */
+/***********************************************************************************************************************************/
+/* Fade In/Out */
 
 @keyframes fadeInOut {
     from {
