--- a/MVC.WebUI/Content/website/css/scss/_core/headers-sections.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/headers-sections.scss
@@ -8,44 +8,35 @@
 .page {
     /* the main page title should always be an h1 tag */
     h1.page-title {
-
     }
-
-    /* styling is applied to the headers - class names for the section elements are not needed (unless styling needs to be applied) */
+    /* styling is applied to the headers - sections are optional - class names for the section elements are not needed (unless styling needs to be applied) */
     .heading-1 {
-
     }
 
     .heading-2 {
-
     }
 
     .heading-3 {
-
     }
 }
 
 /* alternate version - needed if styles need to be applied to the sections - otherwise, use the version above */
 .page {
     h1.page-title {
-
     }
 
-    .section1 {
+    .section-1 {
         .heading-1 {
-
         }
     }
 
-    .section2 {
+    .section-2 {
         .heading-2 {
-
         }
     }
 
-    .section2 {
+    .section-2 {
         .heading-2 {
-
         }
     }
 }
@@ -53,24 +44,20 @@
 /* another alternate version - if you want to impose restrictions on the type of elements used for headers */
 .page {
     h1.page-title {
-
     }
 
-    .section1 {
+    .section-1 {
         & > h2:first-of-type {
-
         }
     }
 
-    .section2 {
+    .section-2 {
         & > h34:first-of-type {
-
         }
     }
 
-    .section2 {
+    .section-2 {
         & > h4:first-of-type {
-
         }
     }
 }
@@ -85,33 +72,76 @@
 .article {
     /* page title - for SEO purposes, the main page title should be an H1 element */
     & > h1:first-of-type {
-
     }
 
     /* heading 1 */
     h2 {
-
     }
 
     /* heading 2 */
     h3 {
-
     }
 
     /* heading 3 */
     h4 {
-
     }
 
     p {
-
+        hyphens: auto;
     }
 
     ul {
-
     }
 
     ol {
+    }
 
+    blockquote {
+    }
+
+    p, li {
+        abbr[title] {
+            border-bottom: 0.0625em dotted #333;
+            cursor: help;
+        }
+
+        @supports (text-decoration-style: dotted) {
+            abbr[title] {
+                border-bottom: none;
+                text-decoration: underline;
+                text-decoration-style: dotted;
+            }
+        }
+
+        code {
+            padding: 0.125em 0.25em;
+            border: 0.0625em solid #E1E1E1;
+            font-size: 0.9em;
+            color: #C7254E;
+            background-color: #F9F2F4;
+            box-shadow: 0 0.0625em 0.25em rgba(0, 0, 0, 0.1);
+        }
+
+        dfn::before {
+            content: open-quote;
+        }
+
+        dfn::after {
+            content: close-quote;
+        }
+
+        var {
+            color: #CC0000;
+        }
+    }
+
+    figure {
+        img {
+
+        }
+
+        figcaption {
+
+        }
     }
 }
