SCSS core - flexbox grid layout added

--- a/MVC.WebUI/Content/website/css/scss/_core/grid-layout.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/grid-layout.scss
@@ -2,6 +2,51 @@
 /* GRID LAYOUT */
 /*******************************************************************************************************************************/
 
+
+
+/*******************************************************************************************************************************/
+/* FLEXBOX GRIDS */
+
+/* https://css-tricks.com/dont-overthink-flexbox-grids/ */
+
+/*******************************************************************************************************************************/
+
+
+/*******************************************************************************************************************************/
+/* Grid Without Gutter */
+
+.grid {
+  display: flex;
+}
+
+.col {
+  flex: 1;
+}
+
+
+
+/*******************************************************************************************************************************/
+/* Grid With Gutter */
+
+.grid {
+  display: flex;
+}
+
+.col {
+  flex: 1;
+  margin: 0 0.5rem; /* gutter: 1rem */
+}
+
+.col:first-child {
+  margin-left: 0;
+}
+
+.col:last-child {
+  margin-right: 0;
+}
+
+
+
 /*
 GRID LAYOUT - using floats and using flexbox
 
@@ -12,6 +57,19 @@ Flexbox grids:
 https://css-tricks.com/dont-overthink-flexbox-grids/
 
 */
+
+
+
+
+/*******************************************************************************************************************************/
+/* FLOAT GRIDS */
+
+/* https://css-tricks.com/dont-overthink-it-grids/ */
+/* http://www.w3schools.com/css/css_rwd_grid.asp */
+
+/*******************************************************************************************************************************/
+
+
 
 /************************************************************************************************************************************************************************************/
 /* Grid Layout */
