--- a/MVC.WebUI/Content/website/css/scss/_core/forms.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/forms.scss
@@ -7,12 +7,28 @@
 
 /* renders field (but not content) invisible: */
 .invisible {
+    display: inline;
+    margin: 0;
+    padding: 0;
     border: none;
-    font: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
     line-height: inherit;
     vertical-align: baseline;
+    text-transform: inherit;
+    letter-spacing: inherit;
+    text-align: inherit;
+    color: inherit;
     background-color: transparent;
+    outline: none;
+    box-shadow: none;
 }
+
+.invisible:focus {
+    text-transform: none;
+}
+
 
 
 /* Built-in ASP.NET MVC validation classes */
