--- a/MVC.WebUI/Content/website/css/scss/reset.scss
+++ b/MVC.WebUI/Content/website/css/scss/reset.scss
@@ -30,8 +30,10 @@
     line-height: 1; /* prefer unitless numbers for line-height values: https://developer.mozilla.org/en-US/docs/Web/CSS/line-height */
     word-wrap: break-word; /* word-wrap has been renamed to overflow-wrap */
     overflow-wrap: break-word; /* word-wrap/overflow-wrap does not work with dynamic widths (e.g. percentage widths, tables that are not set to layout="fixed") - you will need to use word-break instead for these */
+    color: var(--text-colour);
     color: $text-colour;
-    background-color: $background-colour;
+    background-color: var(--bg-color);
+    background-color: $bg-colour;
 }
 
 
@@ -53,12 +55,16 @@
 
 /* Selection ***********************************************************************************************************************************/
 ::-moz-selection {
-	background-color: $selection-background-colour;
+    background-color: var(--selection-bg-colour);
+	background-color: $selection-bg-colour;
+    color: var(--selection-colour);
 	color: $selection-colour;
 }
 
 ::selection {
-	background-color: $selection-background-colour;
+    background-color: var(--selection-bg-colour);
+	background-color: $selection-bg-colour;
+    color: var(--selection-colour);
 	color: $selection-colour;
 }
 
@@ -287,6 +293,7 @@ a::after {
 
 /* a:any-link - https://developer.mozilla.org/en-US/docs/Web/CSS/:any-link */
 a:link, a:visited {
+    color: var(--link-colour);
     color: $link-colour;
     text-decoration: underline;
 }
@@ -302,6 +309,7 @@ a:visited {
 
 a:focus,
 a:hover {
+    color: var(--link-colour-hover);
     color: $link-colour-hover;
     text-decoration: none;
 }
@@ -315,6 +323,7 @@ a:hover {
 }
 
 a:active {
+    color: var(--link-colour-active);
     color: $link-colour-active;
 }
 
