SASS mixins - fullscreen mixin created

--- a/MVC.WebUI/Content/website/css/scss/_mixins.scss
+++ b/MVC.WebUI/Content/website/css/scss/_mixins.scss
@@ -315,6 +315,30 @@
 
 
 /***********************************************************************************************************************/
+/* FULL SCREEN */
+/***********************************************************************************************************************/
+
+@mixin fullscreen($selector) {
+   :-webkit-full-screen #{$selector} {
+        @content;
+    }
+
+    :-moz-full-screen #{$selector} {
+        @content;
+    }
+
+    :-ms-fullscreen #{$selector} {
+        @content;
+    }
+
+    :fullscreen #{$selector} {
+        @content;
+    }
+}
+
+
+
+/***********************************************************************************************************************/
 /* HACKS */
 /***********************************************************************************************************************/
 @mixin hack-ie10-11 {
